--- a/src/app/components/login-dialog/login-dialog.component.html
+++ b/src/app/components/login-dialog/login-dialog.component.html
@@ -15,6 +15,17 @@
           </div>
         }
         
+        @if (showExistingAccounts()) {
+          <mat-card class="login-card use-existing" (click)="switchToExistingAccounts()">
+            <mat-card-header>
+              <mat-card-title>Use Existing Account</mat-card-title>
+            </mat-card-header>
+            <mat-card-content>
+              <p>Select from your previously used accounts</p>
+            </mat-card-content>
+          </mat-card>
+        }
+        
         <div class="login-options">
           <mat-card class="login-card" (click)="generateNewKey()">
             <mat-card-header>
@@ -88,6 +99,28 @@
                [disabled]="!nsecKey || !nsecKey.startsWith('nsec')">
           Login
         </button>
+      </div>
+    }
+    
+    @if (currentView() === 'existing-accounts') {
+      <div mat-dialog-content>
+        <p class="dialog-subtitle">Select an account to continue:</p>
+        
+        <mat-nav-list class="accounts-list">
+          @for (account of savedAccounts; track account.pubkey) {
+            <a mat-list-item (click)="selectExistingAccount(account.pubkey)" class="account-item">
+              <mat-icon matListItemIcon>account_circle</mat-icon>
+              <span matListItemTitle>{{ account.name || getTruncatedNpub(account.pubkey) }}</span>
+              <span matListItemLine class="account-source">
+                {{ account.source }} • Last used: {{ getFormattedDate(account.lastUsed) }}
+              </span>
+            </a>
+          }
+        </mat-nav-list>
+      </div>
+      
+      <div mat-dialog-actions align="end">
+        <button mat-button (click)="currentView.set('main')">Back</button>
       </div>
     }
   </div>
