--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -201,29 +201,26 @@ mat-nav-list .mat-icon {
   transition: transform 0.3s ease-in-out;
 }
 
-// Accounts section
-.nav-subheader {
-  padding: 16px 16px 8px 16px;
-  color: var(--mat-subtitle-text-color);
-  font-size: 14px;
-  font-weight: 500;
-}
-
-.active-account {
+.current-account {
+  display: flex;
+  align-items: center;
+  padding: 8px;
+  border-radius: 4px;
+  cursor: pointer;
   background-color: rgba(0, 0, 0, 0.04);
-  
-  &.mat-mdc-list-item {
-    color: var(--mat-sys-primary);
-  }
 }
 
-.dark-theme .active-account {
+.dark-theme .current-account {
   background-color: rgba(255, 255, 255, 0.05);
+}
+
+.account-icon {
+  color: var(--mat-sys-primary);
+  margin-right: 12px;
 }
 
 .account-name {
   font-size: 14px;
-  max-width: 150px;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
