--- a/src/app/components/login-dialog/login-dialog.component.html
+++ b/src/app/components/login-dialog/login-dialog.component.html
@@ -107,12 +107,12 @@
         <p class="dialog-subtitle">Select an account to continue:</p>
         
         <mat-nav-list class="accounts-list">
-          @for (account of savedAccounts; track account.pubkey) {
+          @for (account of this.nostrService.allUsers(); track account.pubkey) {
             <a mat-list-item (click)="selectExistingAccount(account.pubkey)" class="account-item">
               <mat-icon matListItemIcon>account_circle</mat-icon>
-              <span matListItemTitle>{{ account.name || getTruncatedNpub(account.pubkey) }}</span>
+              <span matListItemTitle>{{ account.name }}</span>
               <span matListItemLine class="account-source">
-                {{ account.source }} • Last used: {{ getFormattedDate(account.lastUsed) }}
+                {{ account.source }} • Last used: {{ account.lastUsed | date:'short' }}
               </span>
             </a>
           }
