--- a/src/app/components/login-dialog/login-dialog.component.scss
+++ b/src/app/components/login-dialog/login-dialog.component.scss
@@ -99,9 +99,18 @@
 
 .account-item {
   border-bottom: 1px solid var(--mat-divider-color, rgba(0, 0, 0, 0.05));
+  position: relative;
   
   &:hover {
     background-color: rgba(0, 0, 0, 0.04);
+  }
+  
+  .delete-button {
+    position: absolute;
+    right: 8px;
+    top: 50%;
+    transform: translateY(-50%);
+    color: var(--mat-warn-color, #f44336);
   }
 }
 
