feat: add relays management functionality with UI for adding and removing relays

--- a/src/app/pages/settings/settings.component.scss
+++ b/src/app/pages/settings/settings.component.scss
@@ -1,3 +1,14 @@
 .settings-container {
   
 }
+
+.setting-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 12px 0;
+  }
+  
+  .dark .setting-item {
+  }
+  
