--- a/src/app/pages/settings/settings.component.scss
+++ b/src/app/pages/settings/settings.component.scss
@@ -11,4 +11,28 @@
   
   .dark .setting-item {
   }
-  
+
+.danger-zone {
+  margin-top: 24px;
+  flex-direction: column;
+  align-items: flex-start;
+
+  h3 {
+    color: #f44336;
+    margin-bottom: 8px;
+  }
+
+  p {
+    margin-bottom: 16px;
+    font-size: 14px;
+  }
+
+  button {
+    align-self: flex-end;
+  }
+}
+
+.wipe-data-button {
+  background-color: #f44336 !important;
+  color: white;
+}
