feat: replace mat-icon with span for success checkmark in overlay

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -138,7 +138,7 @@
   @if (dataLoadingService.showSuccess()) {
   <div class="success-overlay">
     <div class="success-checkmark">
-      <mat-icon class="success-icon">check</mat-icon>
+      <span class="success-icon">✓</span>
     </div>
   </div>
   }
