--- a/src/styles.scss
+++ b/src/styles.scss
@@ -314,6 +314,12 @@ mat-card-content li {
   font-size: 80px;
   height: 80px;
   width: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  line-height: 1;
+  margin: 0;
+  padding: 0;
 }
 
 /* Animation for the success overlay */
