feat: enhance settings and about pages with new layout and storage stats component

--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -34,6 +34,31 @@
       <p>
         The client is built on Angular and Angular Material. It is utilizing Tauri to package the app for desktop users.
       </p>
+
+      <div class="links-section">
+        <h3>Useful Links</h3>
+        <mat-list>
+          <mat-list-item>
+            <a href="https://github.com/sondreb/nostria" target="_blank" rel="noopener">
+              <mat-icon>code</mat-icon>
+              GitHub Repository
+            </a>
+          </mat-list-item>
+          <mat-list-item>
+            <a href="https://nostr.com" target="_blank" rel="noopener">
+              <mat-icon>info</mat-icon>
+              Nostr Protocol
+            </a>
+          </mat-list-item>
+          <mat-list-item>
+            <a href="https://github.com/sondreb/nostria/issues" target="_blank" rel="noopener">
+              <mat-icon>bug_report</mat-icon>
+              Report Issues
+            </a>
+          </mat-list-item>
+        </mat-list>
+      </div>
+
     </mat-card-content>
   </mat-card>
 </div>
