--- a/src/app/pages/about/about.component.scss
+++ b/src/app/pages/about/about.component.scss
@@ -1,1 +1,10 @@
-// Component-specific styles here
+
+.links-section {
+    margin-top: 1rem;
+  }
+  
+  .links-section h3 {
+    margin-bottom: 0.5rem;
+    font-weight: 500;
+  }
+  
