--- a/src/app/pages/settings/settings.component.scss
+++ b/src/app/pages/settings/settings.component.scss
@@ -1,38 +1,32 @@
-.settings-container {
-  
+h2 {
+  margin-top: 2em;
 }
 
-.setting-item {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 12px 0;
-  }
-  
-  .dark .setting-item {
-  }
-
 .danger-zone {
-  margin-top: 24px;
-  flex-direction: column;
-  align-items: flex-start;
-
-  h3 {
+  h2 {
     color: #f44336;
     margin-bottom: 8px;
   }
 
-  p {
-    margin-bottom: 16px;
-    font-size: 14px;
-  }
+}
+
+.setting-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 12px 0;
 
   button {
     align-self: flex-end;
   }
 }
 
+
 .wipe-data-button {
   background-color: #f44336 !important;
   color: white !important;
+}
+
+.full-width {
+  width: 100%;
 }
