feat: update About component to fetch version from manifest and enhance description

--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -5,11 +5,12 @@
         <img src="icons/icon-128x128.png" alt="Nostria Logo" class="logo">
       </div>
       <mat-card-title>About Nostria</mat-card-title>
-      <mat-card-subtitle>Version: {{ version }}</mat-card-subtitle>
+      <mat-card-subtitle>Version: {{ version() }}</mat-card-subtitle>
     </mat-card-header>
     <mat-card-content>
       <p class="description">
-        Reference Implementation of the most important features of Nostr with a global scale architecture.
+        Making the Nostr protocol accessible to everyone, with a focus on user experience and performance for
+        global scale. Let's make Nostr great again.
       </p>
 
       <h3>What is Nostria?</h3>
@@ -26,8 +27,7 @@
       <h3>Desktop</h3>
       <p>Nostria is also accessible as desktop app:</p>
       <ul>
-        <li><a href="https://github.com/sondreb/nostria/releases"
-            target="_blank">Downloads</a></li>
+        <li><a href="https://github.com/sondreb/nostria/releases" target="_blank">Downloads</a></li>
       </ul>
 
       <h3>Architecture</h3>
