--- a/src/app/pages/about/about.component.scss
+++ b/src/app/pages/about/about.component.scss
@@ -1,10 +1,21 @@
-
 .links-section {
-    margin-top: 1rem;
-  }
-  
-  .links-section h3 {
-    margin-bottom: 0.5rem;
-    font-weight: 500;
-  }
-  
+  margin-top: 1rem;
+}
+
+.links-section h3 {
+  margin-bottom: 0.5rem;
+  font-weight: 500;
+}
+
+.logo-container {
+  display: flex;
+  justify-content: flex-end;
+  width: 100%;
+  margin-bottom: 1rem;
+  padding-right: 16px;
+}
+
+.logo {
+  height: 128px;
+  width: auto;
+}
