--- a/src/app/components/storage-stats/storage-stats.component..scss
+++ b/src/app/components/storage-stats/storage-stats.component..scss
@@ -13,6 +13,19 @@
     border-radius: 4px;
 }
 
+// Media query for smaller screens
+@media (max-width: 600px) {
+    .stats-container {
+        justify-content: center;
+    }
+    
+    .stat-item {
+        flex-basis: 80%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+
 .stat-value {
     font-size: 2rem;
     font-weight: 500;
