--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -277,3 +277,10 @@ mat-nav-list .mat-icon {
   font-size: 12px;
   color: var(--mat-subtitle-text-color);
 }
+
+.profile-button-avatar {
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  object-fit: cover;
+}
