feat: enhance profile page layout with improved spacing and bio display

--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -31,9 +31,11 @@
         <mat-icon class="verified-icon">verified</mat-icon>
       </div>
       }
-      <div class="profile-bio" *ngIf="profile.content.about">
+      @if (profile.content.about) {
+      <div class="profile-bio">
         {{ profile.content.about }}
       </div>
+      }
     </div>
     <div class="profile-actions">
       @if (isOwnProfile()) {
